--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 <body>
 
   <h1>★しりとりゲーム★</h1>
-  <p id="previousWord"></p>
+  <p id="previousWord">sfwfw</p>
   <input id="nextWordInput" type="text" />
   <button id="nextWordSendButton">送信</button>
 
