--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,9 @@
   <p id="hiswords"></p><!--uwa-->
 
   <script type="module">
-    document.write("asdfqajgtdfuqfc");
+    document.open();
+      document.write("atatatattatattaatta");
+      document.close();
 
     window.onload = async (event) => {
       await fetch("/shiritori", {
