--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,12 @@
 
 
 <body>
-
-  <h1>★しりとりゲーム★</h1>
-  <p id="previousWord"></p>
-  <input id="nextWordInput" type="text" />
-  <button id="nextWordSendButton">送信</button><br>
+  <div class="content">
+    <h1>★しりとりゲーム★</h1>
+    <p id="previousWord"></p>
+   <input id="nextWordInput" type="text" />
+    <button id="nextWordSendButton">送信</button>
+  </div>
 
   <script type="module">
     window.onload = async (event) => {
