--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <p id="previousWord"></p>
    <input id="nextWordInput" type="text" />
     <button id="nextWordSendButton">送信</button>
+    <button id="reset">リセット</button>
     <p class="ri" id="rireki"></p>
   </div>
 
@@ -48,17 +49,18 @@
       }
         const previousWord = await response.text();
 
-        rireki = rireki + `→${previousWord}`;
-        const his = document.querySelector("#rireki");//rireki
-        his.innerText = rireki;
-
         const para = document.querySelector("#previousWord");
         if(`${previousWord}` == "END"){
           para.innerText = "「ん」で終わったのでゲーム終了です";
+          rireki = rireki + `${previousWord}`;
         }
         else{
           para.innerText = `前の単語：${previousWord}`;
+          rireki = rireki + `${previousWord}→`;
         }
+        
+        const his = document.querySelector("#rireki");//rireki
+        his.innerText = rireki;
 
       };
     };
