--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <p id="previousWord"></p>
    <input id="nextWordInput" type="text" />
     <button id="nextWordSendButton">送信</button>
-    <button id="reset">リセット</button>
+    <!--<button id="reset">リセット</button>-->
     <p class="ri" id="rireki"></p>
   </div>
 
