--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
           rireki = rireki + `${previousWord}→`;
         }
         
-        const his = document.querySelector("#rireki");//rireki
+        const his = document.querySelector("#rireki");//rirek
         his.innerText = rireki;
 
       };
